login system implemented

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -1,10 +1,28 @@
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 // Partials
+@import './scss/colors.scss';
+
+.primary-color {
+  color: $primary-color;
+}
+
+.secondary-color {
+  color: $secondary-color;
+}
+
+.primary-background-color {
+  background-color: $primary-color;
+}
+
+.secondary-background-color {
+  background-color: $secondary-color;
+}
+
 @import './scss/header.scss';
-@import './scss/footer.scss';
+@import './scss/login.scss';
+@import './scss/breadcrumb.scss';
 @import './scss/card/card.scss';
-@import './scss/card/single_card.scss';
