--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -3,12 +3,29 @@ body {
   padding: 0;
 }
 
+.primary-color {
+  color: #0A91AB;
+}
+
+.secondary-color {
+  color: #FFC045;
+}
+
+.primary-background-color {
+  background-color: #0A91AB;
+}
+
+.secondary-background-color {
+  background-color: #FFC045;
+}
+
 .main-header {
   position: relative;
   margin: 20px auto;
   padding: 10px;
   background-color: #fff;
   border-radius: 4px;
+  border-bottom: 1px solid #e6e6e6;
 }
 .main-header .menu-toggle {
   display: none;
@@ -29,17 +46,20 @@ body {
 .main-header nav ul li {
   list-style: none;
 }
-.main-header nav ul li a {
+.main-header nav ul li a, .main-header nav ul li span {
   display: block;
   margin: 10px 0;
   padding: 10px 20px;
   text-decoration: none;
   color: #262626;
 }
-.main-header nav ul li a.active, .main-header nav ul li a:hover {
+.main-header nav ul li a.active, .main-header nav ul li a:hover, .main-header nav ul li span.active, .main-header nav ul li span:hover {
   background-color: #0A91AB;
   color: #fff;
   transition: 0.3s;
+}
+.main-header nav ul li span {
+  cursor: pointer;
 }
 .main-header .clearfix {
   clear: both;
@@ -72,154 +92,124 @@ body {
   .main-header nav.active ul {
     display: block;
   }
-  .main-header nav.active ul li a {
+  .main-header nav.active ul a, .main-header nav.active ul li span {
     margin: 0;
   }
 }
-footer {
-  flex-shrink: 0;
-  text-align: center;
-  background-color: #0A91AB;
-  padding: 10px;
-  color: white;
-}
-footer .footer-me {
-  font-weight: bolder;
-  text-decoration: none;
-  color: white;
+/* login */
+.login-container {
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
-.post_element {
+.login-form-1 {
+  padding: 5%;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+}
+.login-form-1 h3 {
+  text-align: center;
+  color: #333;
+}
+
+.login-container form {
+  padding: 5%;
+}
+
+.btnSubmit {
+  width: 50%;
+  border-radius: 1rem;
+  padding: 1.5%;
+  border: none;
+}
+
+.login-form-1 .btnSubmit {
+  font-weight: 600;
+  color: #fff;
+  background-color: #0A91AB;
+}
+
+.login-form-1 .no-registered {
+  color: #0A91AB;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.login-spinner {
+  text-align: center;
+}
+
+.breadcrumb-block {
+  padding-top: 3.57143rem !important;
+  padding-bottom: 3.57143rem !important;
+  margin-bottom: 1.42857rem !important;
+  color: #fff !important;
+  background-size: cover !important;
+  background-position: center;
   position: relative;
-  z-index: 1;
-  display: block;
-  background: #FFFFFF;
-  min-width: 270px;
-  height: 470px;
-  -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
-  -webkit-transition: all 0.3s linear 0s;
-  -moz-transition: all 0.3s linear 0s;
-  -ms-transition: all 0.3s linear 0s;
-  -o-transition: all 0.3s linear 0s;
-  transition: all 0.3s linear 0s;
 }
-.post_element:hover {
-  -webkit-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
+
+.card-block {
+  position: relative;
+  padding: 1.5rem;
+  border-width: 1px;
+  border-radius: 1rem;
+  border: 1px solid rgba(167, 178, 206, 0.5);
+  background-color: #fbfcfc;
+  min-height: 600px;
+  margin: 1rem 0;
 }
-.post_element:hover .post_thumbnail a img {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  transform: scale(1.1);
-  opacity: 0.6;
+.card-block:hover {
+  border: 2px solid rgba(190, 197, 214, 0.5);
+  transition: 0.2s;
 }
-.post_element .post_thumbnail {
-  background: #000000;
-  height: 400px;
+.card-block .card-user,
+.card-block .card-comments,
+.card-block .card-title {
+  margin: 1rem;
+}
+.card-block .card-user {
+  font-size: 14px;
+}
+.card-block .card-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  /* number of lines to show */
+  -webkit-box-orient: vertical;
+  min-height: 69px;
+}
+.card-block .card-title h3 {
+  font-weight: bolder;
+  font-size: 1.4625rem;
+  line-height: 1.975rem;
+  text-decoration: none;
+  color: initial;
+  word-wrap: break-word;
   overflow: hidden;
 }
-.post_element .post_thumbnail img {
-  display: block;
-  -webkit-transition: all 0.3s linear 0s;
-  -moz-transition: all 0.3s linear 0s;
-  -ms-transition: all 0.3s linear 0s;
-  -o-transition: all 0.3s linear 0s;
-  transition: all 0.3s linear 0s;
-}
-.post_element .post_content {
-  position: absolute;
-  bottom: 0;
-  background: #FFFFFF;
+.card-block .card-body img {
+  border-radius: 0.75rem;
   width: 100%;
-  padding: 30px;
-  -webkti-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-  -moz-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-  -ms-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-  -o-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-  transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
+  height: 100%;
 }
-.post_element .post_content .post_user {
-  position: absolute;
-  top: -34px;
-  left: 0;
-  background: #FFC045;
-  padding: 10px 15px;
-  color: #FFFFFF;
-  font-size: 14px;
-  font-weight: 600;
-  text-transform: uppercase;
+.card-block .card-body p {
+  margin-top: 1rem;
 }
-.post_element .post_content .post_title {
-  margin: 0;
-  padding: 0 0 10px;
-  color: #333333;
-  font-size: 26px;
-  font-weight: 700;
-  text-decoration: none;
-}
-.post_element .post_content .post_title:hover {
-  color: #FFC045;
-  transition: 0.3s;
-}
-.post_element .post_content .post_sub_title {
-  margin: 0;
-  padding: 0 0 20px;
-  color: #0A91AB;
-  font-size: 20px;
-  font-weight: 400;
-}
-.post_element .post_content .post_description {
-  display: none;
-  color: #666666;
-  font-size: 14px;
-  line-height: 1.8em;
-}
-.post_element .post_content .post_meta {
-  margin: 30px 0 0;
-  color: #999999;
-}
-.post_element .post_content .post_meta span {
-  color: #999999;
-  text-decoration: none;
-}
-
-.post_block {
-  padding: 0 25px;
-  margin: 10px 0;
-  -webkti-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  float: left;
-}
-
-.post_info {
-  width: 300px;
-  margin: 50px auto;
-  text-align: center;
-}
-.post_info h1 {
-  margin: 0 0 15px;
-  padding: 0;
-  font-size: 24px;
-  font-weight: bold;
-  color: #333333;
-}
-.post_info span {
-  color: #666666;
-  font-size: 12px;
-}
-.post_info span a {
-  color: #000000;
-  text-decoration: none;
-}
-.post_info span .fa {
-  color: #0A91AB;
+.card-block .card-comments {
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
+                            supported by Chrome, Edge, Opera and Firefox */
 }
 
 /*# sourceMappingURL=App.css.map */
