--- a/src/assets/scss/card/card.scss
+++ b/src/assets/scss/card/card.scss
@@ -1,150 +1,76 @@
-.post_element {
-	position: relative;
-	z-index: 1;
-	display: block;
-	background: #FFFFFF;
-	min-width: 270px;
-	height: 470px;
-	-webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
-	-moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
-	box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
-	-webkit-transition: all 0.3s linear 0s;
-	-moz-transition: all 0.3s linear 0s;
-	-ms-transition: all 0.3s linear 0s;
-	-o-transition: all 0.3s linear 0s;
-	transition: all 0.3s linear 0s;
+.card-block {
+    position: relative;
+    padding: 1.5rem;
+    border-width: 1px;
+    border-radius: 1rem;
+    border: 1px solid rgba(167, 178, 206, 0.5);
+    background-color: #fbfcfc;
+    min-height: 600px;
+    margin: 1rem 0;
 
-	&:hover {
-		-webkit-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
-		-moz-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
-		box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
+    &:hover {
+        border: 2px solid rgba(190, 197, 214, 0.5);
+        transition: .2s
+    }
 
-		.post_thumbnail {
-			a img {
-				-webkit-transform: scale(1.1);
-				-moz-transform: scale(1.1);
-				transform: scale(1.1);
-				opacity: 0.6;
-			}
-		}
-	}
+    .card-user,
+    .card-comments,
+    .card-title {
+        margin: 1rem;
+    }
 
-	.post_thumbnail {
-		background: #000000;
-		height: 400px;
-		overflow: hidden;
+    .card-user {
+        font-size: 14px;
+    }
 
-		img {
-			display: block;
-			-webkit-transition: all 0.3s linear 0s;
-			-moz-transition: all 0.3s linear 0s;
-			-ms-transition: all 0.3s linear 0s;
-			-o-transition: all 0.3s linear 0s;
-			transition: all 0.3s linear 0s;
-		}
-	}
+    .card-title {
 
-	.post_content {
-		position: absolute;
-		bottom: 0;
-		background: #FFFFFF;
-		width: 100%;
-		padding: 30px;
-		-webkti-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-		-webkit-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-		-moz-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-		-ms-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-		-o-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-		transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        /* number of lines to show */
+        -webkit-box-orient: vertical;
+        min-height: 69px;
 
-		.post_user {
-			position: absolute;
-			top: -34px;
-			left: 0;
-			background: #FFC045;
-			padding: 10px 15px;
-			color: #FFFFFF;
-			font-size: 14px;
-			font-weight: 600;
-			text-transform: uppercase;
-		}
+        h3 {
+            font-weight: bolder;
+            font-size: 1.4625rem;
+            line-height: 1.975rem;
+            text-decoration: none;
+            color: initial;
+            word-wrap: break-word;
+            overflow: hidden;
+        }
+    }
 
-		.post_title {
-			margin: 0;
-			padding: 0 0 10px;
-			color: #333333;
-			font-size: 26px;
-			font-weight: 700;
-			text-decoration: none;
 
-			&:hover {
-				color: #FFC045;
-				transition: 0.3s
-			}
-		}
+    .card-body {
 
-		.post_sub_title {
-			margin: 0;
-			padding: 0 0 20px;
-			color: #0A91AB;
-			font-size: 20px;
-			font-weight: 400;
-		}
+        img {
+            border-radius: .75rem;
+            width: 100%;
+            height: 100%;
+        }
 
-		.post_description {
-			display: none;
-			color: #666666;
-			font-size: 14px;
-			line-height: 1.8em;
-		}
+        p {
+            margin-top: 1rem
+        }
+    }
 
-		.post_meta {
-			margin: 30px 0 0;
-			color: #999999;
-
-			span {
-				color: #999999;
-				text-decoration: none;
-			}
-		}
-	}
-}
-
-.post_block {
-	padding: 0 25px;
-	margin: 10px 0;
-	-webkti-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	float: left;
-}
-
-.post_info {
-	width: 300px;
-	margin: 50px auto;
-	text-align: center;
-
-	h1 {
-		margin: 0 0 15px;
-		padding: 0;
-		font-size: 24px;
-		font-weight: bold;
-		color: #333333;
-	}
-
-	span {
-		color: #666666;
-		font-size: 12px;
-
-		a {
-			color: #000000;
-			text-decoration: none;
-		}
-
-		.fa {
-			color: #0A91AB;
-		}
-	}
+    .card-comments {
+        -webkit-touch-callout: none;
+        /* iOS Safari */
+        -webkit-user-select: none;
+        /* Safari */
+        -khtml-user-select: none;
+        /* Konqueror HTML */
+        -moz-user-select: none;
+        /* Old versions of Firefox */
+        -ms-user-select: none;
+        /* Internet Explorer/Edge */
+        user-select: none;
+        /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+    }
 }
