--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -4,7 +4,7 @@
     padding: 10px;
     background-color: #fff;
     border-radius: 4px;
-
+    border-bottom: 1px solid #e6e6e6;
 
     .menu-toggle {
         display: none
@@ -27,7 +27,7 @@
             li {
                 list-style: none;
 
-                a {
+                a, span {
                     display: block;
                     margin: 10px 0;
                     padding: 10px 20px;
@@ -36,10 +36,14 @@
 
                     &.active,
                     &:hover {
-                        background-color: #0A91AB;
+                        background-color: $primary-color;
                         color: #fff;
                         transition: .3s
                     }
+                }
+
+                span {
+                    cursor: pointer
                 }
             }
         }
@@ -68,7 +72,7 @@
             cursor: pointer;
             text-align: center;
             font-size: 30px;
-            color: #0A91AB;
+            color: $primary-color;
         }
     
         nav {
@@ -81,7 +85,9 @@
                 ul {
                     display: block;
     
-                    li a {
+                    
+                    
+                    a, li span {
                         margin: 0;
                     }
                 }
